--- a/alibabacloud-gateway-pop/java/pom.xml
+++ b/alibabacloud-gateway-pop/java/pom.xml
@@ -64,7 +64,7 @@
     <dependency>
       <groupId>com.aliyun</groupId>
       <artifactId>openapiutil</artifactId>
-      <version>0.1.13</version>
+      <version>0.1.14</version>
     </dependency>
     <dependency>
       <groupId>com.aliyun</groupId>
@@ -75,6 +75,31 @@
       <groupId>com.aliyun</groupId>
       <artifactId>credentials-java</artifactId>
       <version>0.2.4</version>
+    </dependency>
+    <dependency>
+      <groupId>com.aliyun</groupId>
+      <artifactId>darabonba-encode-util</artifactId>
+      <version>0.0.1</version>
+    </dependency>
+    <dependency>
+      <groupId>com.aliyun</groupId>
+      <artifactId>darabonba-signature-util</artifactId>
+      <version>0.0.2</version>
+    </dependency>
+    <dependency>
+      <groupId>com.aliyun</groupId>
+      <artifactId>darabonba-string</artifactId>
+      <version>0.0.5</version>
+    </dependency>
+    <dependency>
+      <groupId>com.aliyun</groupId>
+      <artifactId>darabonba-map</artifactId>
+      <version>0.0.1</version>
+    </dependency>
+    <dependency>
+      <groupId>com.aliyun</groupId>
+      <artifactId>darabonba-array</artifactId>
+      <version>0.0.1</version>
     </dependency>
   </dependencies>
   <build>
