--- a/alibabacloud-gateway-pop/ts/package.json
+++ b/alibabacloud-gateway-pop/ts/package.json
@@ -23,8 +23,13 @@
     "@alicloud/gateway-spi": "^0.0.8",
     "@alicloud/credentials": "^2",
     "@alicloud/tea-util": "^1.4.0",
-    "@alicloud/openapi-util": "^0.2.4",
-    "@alicloud/endpoint-util": "^0.0.1"
+    "@alicloud/openapi-util": "^0.2.7",
+    "@alicloud/endpoint-util": "^0.0.1",
+    "@alicloud/darabonba-encode-util": "^0.0.1",
+    "@alicloud/darabonba-signature-util": "^0.0.2",
+    "@alicloud/darabonba-string": "^1.0.2",
+    "@alicloud/darabonba-map": "^0.0.1",
+    "@alicloud/darabonba-array": "^0.0.1"
   },
   "files": [
     "dist",
