--- a/alibabacloud-gateway-fc/util/java/pom.xml
+++ b/alibabacloud-gateway-fc/util/java/pom.xml
@@ -1,25 +1,33 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId></groupId>
-  <artifactId></artifactId>
-  <version></version>
+  <groupId>com.aliyun</groupId>
+  <artifactId>alibabacloud-gateway-fc-util</artifactId>
+  <version>0.0.1</version>
   <packaging>jar</packaging>
-  <name></name>
+  <name>alibabacloud-gateway-fc-util</name>
   <description>
-    </description>
-  <url></url>
+    Aliyun Gateway FC Util for Java
+
+    Copyright (C) Alibaba Cloud Computing
+    All rights reserved.
+
+    版权所有 （C）阿里云计算有限公司
+
+    http://www.aliyun.com
+  </description>
+  <url>http://www.aliyun.com</url>
   <licenses>
     <license>
-      <name></name>
-      <url></url>
+      <name>The Apache License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
     </license>
   </licenses>
   <developers>
     <developer>
-      <id></id>
-      <name></name>
-      <email></email>
+      <id>aliyunproducts</id>
+      <name>Aliyun SDK</name>
+      <email>aliyunsdk@aliyun.com</email>
     </developer>
   </developers>
   <distributionManagement>
@@ -33,9 +41,9 @@
     </repository>
   </distributionManagement>
   <scm>
-    <connection></connection>
-    <developerConnection></developerConnection>
-    <url></url>
+    <connection/>
+    <developerConnection/>
+    <url/>
   </scm>
   <dependencies>
     <dependency>
@@ -48,11 +56,6 @@
       <artifactId>tea</artifactId>
       <version>1.1.14</version>
     </dependency>
-    <dependency>
-      <groupId>org.apache.httpcomponents.core5</groupId>
-      <artifactId>httpcore5</artifactId>
-      <version>5.1.3</version>
-  </dependency>
   </dependencies>
   <build>
     <plugins>
