--- a/alibabacloud-gateway-sls/util/java/pom.xml
+++ b/alibabacloud-gateway-sls/util/java/pom.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId></groupId>
-  <artifactId></artifactId>
-  <version></version>
+  <groupId>com.aliyun</groupId>
+  <artifactId>alibabacloud-gateway-sls</artifactId>
+  <version>0.0.1</version>
   <packaging>jar</packaging>
   <name></name>
   <description>
@@ -38,6 +38,21 @@
     <url></url>
   </scm>
   <dependencies>
+    <dependency>
+      <groupId>net.jpountz.lz4</groupId>
+      <artifactId>lz4</artifactId>
+      <version>1.3.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.aliyun</groupId>
+      <artifactId>tea</artifactId>
+      <version>1.1.14</version>
+    </dependency>
+    <dependency>
+      <groupId>com.aliyun</groupId>
+      <artifactId>tea-util</artifactId>
+      <version>0.2.14</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
