[SLS gateway]rebuild for util

--- a/alibabacloud-gateway-sls/util/ts/package.json
+++ b/alibabacloud-gateway-sls/util/ts/package.json
@@ -18,8 +18,7 @@
     "ts-node": "^8.6.2",
     "typescript": "^3.7.5"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "files": [
     "dist",
     "src"
