--- a/alibabacloud-gateway-sls/util/java/pom.xml
+++ b/alibabacloud-gateway-sls/util/java/pom.xml
@@ -2,24 +2,32 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.aliyun</groupId>
-  <artifactId>alibabacloud-gateway-sls</artifactId>
+  <artifactId>alibabacloud-gateway-sls-util</artifactId>
   <version>0.0.1</version>
   <packaging>jar</packaging>
-  <name></name>
+  <name>alibabacloud-gateway-sls-util</name>
   <description>
-    </description>
-  <url></url>
+    Aliyun Gateway SLS Util for Java
+
+    Copyright (C) Alibaba Cloud Computing
+    All rights reserved.
+
+    版权所有 （C）阿里云计算有限公司
+
+    http://www.aliyun.com
+  </description>
+  <url>http://www.aliyun.com</url>
   <licenses>
     <license>
-      <name></name>
-      <url></url>
+      <name>The Apache License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
     </license>
   </licenses>
   <developers>
     <developer>
-      <id></id>
-      <name></name>
-      <email></email>
+      <id>aliyunproducts</id>
+      <name>Aliyun SDK</name>
+      <email>aliyunsdk@aliyun.com</email>
     </developer>
   </developers>
   <distributionManagement>
@@ -33,9 +41,9 @@
     </repository>
   </distributionManagement>
   <scm>
-    <connection></connection>
-    <developerConnection></developerConnection>
-    <url></url>
+    <connection/>
+    <developerConnection/>
+    <url/>
   </scm>
   <dependencies>
     <dependency>
@@ -46,7 +54,7 @@
     <dependency>
       <groupId>com.aliyun</groupId>
       <artifactId>tea</artifactId>
-      <version>1.1.14</version>
+      <version>1.2.3</version>
     </dependency>
     <dependency>
       <groupId>com.aliyun</groupId>
