--- a/alibabacloud-gateway-oss/php/composer.json
+++ b/alibabacloud-gateway-oss/php/composer.json
@@ -13,14 +13,14 @@
     "php": ">5.5",
     "alibabacloud/gateway-spi": "^1",
     "alibabacloud/credentials": "^1.1",
-    "alibabacloud/tea-utils": "^0.2.16",
-    "alibabacloud/tea-oss-utils": "^0.3.0",
-    "alibabacloud/openapi-util": "^0.1.10",
+    "alibabacloud/tea-utils": "^0.2.19",
+    "alibabacloud/tea-oss-utils": "^0.3.1",
+    "alibabacloud/openapi-util": "^0.1.10|^0.2.1",
     "alibabacloud/tea-xml": "^0.2",
     "alibabacloud/darabonba-string": "^0.1.14",
-    "alibabacloud/darabonba-array": "^0.0.2",
-    "alibabacloud/darabonba-signature-util": "^0.0.3",
-    "alibabacloud/darabonba-encode-util": "^0.0.1",
+    "alibabacloud/darabonba-array": "^0.1.0",
+    "alibabacloud/darabonba-signature-util": "^0.0.4",
+    "alibabacloud/darabonba-encode-util": "^0.0.2",
     "alibabacloud/darabonba-map": "^0.0.1"
   },
   "autoload": {
