[SLS util]Bump 0.0.1

--- a/alibabacloud-gateway-sls/util/csharp/core/client.csproj
+++ b/alibabacloud-gateway-sls/util/csharp/core/client.csproj
@@ -7,7 +7,7 @@
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <AssemblyName>AlibabaCloud.GatewaySls_Util</AssemblyName>
-    <Version/>
+    <Version>0.0.1</Version>
     <LangVersion>5</LangVersion>
     <Authors>Alibaba Cloud</Authors>
     <Description>Alibaba Cloud SLS Util Library for .NET</Description>
