ts support uncompress

--- a/alibabacloud-gateway-sls/util/ts/package.json
+++ b/alibabacloud-gateway-sls/util/ts/package.json
@@ -16,9 +16,12 @@
     "nyc": "^15.0.0",
     "source-map-support": "^0.5.16",
     "ts-node": "^8.6.2",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "lz4": "0.6.5"
   },
-  "dependencies": {},
+  "dependencies": {
+    "lz4": "0.6.5"
+  },
   "files": [
     "dist",
     "src"
