[sls gateway tea]support c# php util

--- a/alibabacloud-gateway-sls/util/csharp/core/client.csproj
+++ b/alibabacloud-gateway-sls/util/csharp/core/client.csproj
@@ -40,5 +40,6 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="DotNetZip" Version="1.16.0" />
   </ItemGroup>
 </Project>
