--- a/alibabacloud-gateway-sls/util/ts/package.json
+++ b/alibabacloud-gateway-sls/util/ts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@alicloud/gateway-sls-util",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "main": "dist/client.js",
   "scripts": {
@@ -18,9 +18,7 @@
     "ts-node": "^8.6.2",
     "typescript": "^3.7.5"
   },
-  "dependencies": {
-    "lz4": "^0.6.5"
-  },
+  "dependencies": {},
   "files": [
     "dist",
     "src"
