--- a/alibabacloud-gateway-oss/util/java/pom.xml
+++ b/alibabacloud-gateway-oss/util/java/pom.xml
@@ -57,6 +57,9 @@
       <version>0.1.6</version>
     </dependency>
   </dependencies>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
   <build>
     <plugins>
       <plugin>
