[POP Gateway]fix: resolve region from endpoint

--- a/.github/workflows/pop_golang.yml
+++ b/.github/workflows/pop_golang.yml
@@ -34,6 +34,6 @@ jobs:
     - name: Build
       run: go mod tidy
     - name: Test
-      run: go test -race -coverprofile=coverage.txt -covermode=atomic ./service/...
+      run: go test -race -coverprofile=coverage.txt -covermode=atomic ./client/...
     - name: CodeCov
       run: bash <(curl -s https://codecov.io/bash) -cF golang
