--- a/.github/workflows/pop_python.yml
+++ b/.github/workflows/pop_python.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        python-version: ["3.6", "3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]
       fail-fast: false
 
     steps:
@@ -24,7 +24,11 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
-      run: pip install coverage pytest && python setup.py install
+      run: pip install pytest==6.2.5 coverage==5.5 importlib-metadata==1.7.0 zipp==2.2.1 typing-extensions==3.10.0.2 && python setup.py install
+      if: matrix.python-version == '3.7'
+    - name: Install dependencies
+      run: python -m pip install setuptools && python setup.py install && pip install pytest coverage
+      if: matrix.python-version != '3.7'
     - name: Test with unittest
       run: |
         coverage run --source="./alibabacloud_tea_util" -m pytest tests/test_*
