--- a/alibabacloud-gateway-pop/java/pom.xml
+++ b/alibabacloud-gateway-pop/java/pom.xml
@@ -54,7 +54,8 @@
     <dependency>
       <groupId>com.aliyun</groupId>
       <artifactId>tea</artifactId>
-      <version>1.1.14</version>
+      <version>1.2.9</version>
+      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>com.aliyun</groupId>
@@ -101,6 +102,12 @@
       <artifactId>darabonba-array</artifactId>
       <version>0.1.0</version>
     </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.13.1</version>
+      <scope>test</scope>
+  </dependency>
   </dependencies>
   <build>
     <plugins>
