--- a/alibabacloud-gateway-pop/ts/package.json
+++ b/alibabacloud-gateway-pop/ts/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dist/client.js",
   "scripts": {
-    "test": "mocha --reporter spec --timeout 3000 test/*.test.js",
+    "test": "mocha -r ts-node/register -r source-map-support/register test/**/*.spec.ts",
     "test-cov": "nyc -e .ts -r=html -r=text -r=lcov npm run test",
     "build": "tsc",
     "prepublishOnly": "tsc"
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/mocha": "^7.0.1",
     "@types/node": "^12.12.26",
+    "mocha": "^7.0.1",
     "nyc": "^15.0.0",
     "source-map-support": "^0.5.16",
     "ts-node": "^8.6.2",
