--- a/alibabacloud-gateway-spi/java/pom.xml
+++ b/alibabacloud-gateway-spi/java/pom.xml
@@ -49,12 +49,12 @@
     <dependency>
       <groupId>com.aliyun</groupId>
       <artifactId>tea</artifactId>
-      <version>1.1.14</version>
+      <version>[1.1.14, 2.0.0)</version>
     </dependency>
     <dependency>
       <groupId>com.aliyun</groupId>
       <artifactId>credentials-java</artifactId>
-      <version>0.2.4</version>
+      <version>0.3.6</version>
     </dependency>
   </dependencies>
   <build>
