--- a/alibabacloud-gateway-pds/java/pom.xml
+++ b/alibabacloud-gateway-pds/java/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.aliyun</groupId>
   <artifactId>alibabacloud-gateway-pds</artifactId>
-  <version>0.0.8</version>
+  <version>0.0.9</version>
   <packaging>jar</packaging>
   <name>alibabacloud-gateway-pds</name>
   <description>
@@ -94,7 +94,7 @@
     <dependency>
       <groupId>com.aliyun</groupId>
       <artifactId>tea</artifactId>
-      <version>1.2.0</version>
+      <version>[1.1.14, 2.0.0)</version>
     </dependency>
   </dependencies>
   <build>
