--- a/alibabacloud-gateway-sls/util/java/pom.xml
+++ b/alibabacloud-gateway-sls/util/java/pom.xml
@@ -51,6 +51,12 @@
       <artifactId>lz4</artifactId>
       <version>1.3.0</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.google.protobuf/protobuf-java -->
+    <dependency>
+      <groupId>com.google.protobuf</groupId>
+      <artifactId>protobuf-java</artifactId>
+      <version>3.25.4</version>
+    </dependency>
     <dependency>
       <groupId>com.aliyun</groupId>
       <artifactId>tea</artifactId>
