--- a/alibabacloud-gateway-sls/util/java/pom.xml
+++ b/alibabacloud-gateway-sls/util/java/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.aliyun</groupId>
   <artifactId>alibabacloud-gateway-sls-util</artifactId>
-  <version>0.0.1</version>
+  <version>0.3.0</version>
   <packaging>jar</packaging>
   <name>alibabacloud-gateway-sls-util</name>
   <description>
@@ -61,6 +61,17 @@
       <artifactId>tea-util</artifactId>
       <version>0.2.14</version>
     </dependency>
+    <dependency>
+      <groupId>com.github.luben</groupId>
+      <artifactId>zstd-jni</artifactId>
+      <version>1.5.6-3</version>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.11</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
@@ -69,8 +80,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.6.1</version>
         <configuration>
-          <source>7</source>
-          <target>7</target>
+          <source>8</source>
+          <target>8</target>
         </configuration>
       </plugin>
       <plugin>
