--- a/alibabacloud-gateway-sls/util/ts/package.json
+++ b/alibabacloud-gateway-sls/util/ts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@alicloud/gateway-sls-util",
-  "version": "0.0.2",
+  "version": "0.3.0",
   "description": "",
   "main": "dist/client.js",
   "scripts": {
@@ -12,13 +12,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/lz4": "^0.6.4",
     "@types/node": "^12.12.26",
     "nyc": "^15.0.0",
     "source-map-support": "^0.5.16",
     "ts-node": "^8.6.2",
     "typescript": "^3.7.5"
   },
-  "dependencies": {},
+  "dependencies": {
+    "lz4": "^0.6.5"
+  },
   "files": [
     "dist",
     "src"
