--- a/alibabacloud-gateway-sls/util/csharp/core/client.csproj
+++ b/alibabacloud-gateway-sls/util/csharp/core/client.csproj
@@ -7,7 +7,7 @@
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <AssemblyName>AlibabaCloud.GatewaySls_Util</AssemblyName>
-    <Version>0.0.2</Version>
+    <Version>0.3.0</Version>
     <LangVersion>5</LangVersion>
     <Authors>Alibaba Cloud</Authors>
     <Description>Alibaba Cloud SLS Util Library for .NET</Description>
@@ -41,5 +41,6 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
     <PackageReference Include="DotNetZip" Version="1.16.0" />
+    <PackageReference Include="Tea" Version="1.0.11" />
   </ItemGroup>
 </Project>
