--- a/.github/workflows/pop_csharp.yml
+++ b/.github/workflows/pop_csharp.yml
@@ -12,14 +12,14 @@ defaults:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - name: Setup .NET Core
-      uses: actions/setup-dotnet@v1
+      uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: 2.2.207
+        dotnet-version: '8.x'
     - name: install altcover
       run: cd core/ && dotnet tool install --global altcover.visualizer --version 8.6.14
     - name: Install dependencies
