--- a/alibabacloud-gateway-pop/ts/package.json
+++ b/alibabacloud-gateway-pop/ts/package.json
@@ -31,7 +31,8 @@
     "@alicloud/darabonba-signature-util": "^0.0.4",
     "@alicloud/darabonba-string": "^1.0.2",
     "@alicloud/darabonba-map": "^0.0.1",
-    "@alicloud/darabonba-array": "^0.1.0"
+    "@alicloud/darabonba-array": "^0.1.0",
+    "@alicloud/tea-xml": "0.0.3"
   },
   "files": [
     "dist",
