--- a/alibabacloud-gateway-pop/csharp/core/client.csproj
+++ b/alibabacloud-gateway-pop/csharp/core/client.csproj
@@ -51,5 +51,6 @@
     <PackageReference Include="AlibabaCloud.DarabonbaMap" Version="0.0.2"/>
     <PackageReference Include="AlibabaCloud.DarabonbaArray" Version="0.1.0"/>
     <PackageReference Include="Tea" Version="1.1.3"/>
+    <PackageReference Include="AlibabaCloud.TeaXML" Version="0.0.5"/>
   </ItemGroup>
 </Project>
