--- a/alibabacloud-gateway-sls/util/java/pom.xml
+++ b/alibabacloud-gateway-sls/util/java/pom.xml
@@ -54,12 +54,12 @@
     <dependency>
       <groupId>com.aliyun</groupId>
       <artifactId>tea</artifactId>
-      <version>1.2.3</version>
+      <version>1.3.3</version>
     </dependency>
     <dependency>
       <groupId>com.aliyun</groupId>
       <artifactId>tea-util</artifactId>
-      <version>0.2.14</version>
+      <version>0.2.23</version>
     </dependency>
     <dependency>
       <groupId>com.github.luben</groupId>
@@ -133,6 +133,11 @@
         <artifactId>maven-shade-plugin</artifactId>
         <version>3.2.4</version>
         <configuration>
+            <artifactSet>
+                <includes>
+                    <include>com.google.protobuf:protobuf-java</include>
+                </includes>
+            </artifactSet>
             <relocations>
                 <relocation>
                     <pattern>com.google.protobuf</pattern>
