[POP gateway]fix SignedHeaders

--- a/.github/workflows/pop_python.yml
+++ b/.github/workflows/pop_python.yml
@@ -11,22 +11,22 @@ defaults:
     working-directory: alibabacloud-gateway-pop/python
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     strategy:
       matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
       fail-fast: false
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
-      run: pip install setuptools urllib3==1.26.20 alibabacloud-tea coverage pytest alibabacloud-credentials==0.3.6 && python setup.py install
+      run: pip install setuptools urllib3==1.26.20 'cryptography>=3.0.0, <45.0.0' alibabacloud-tea alibabacloud_darabonba_encode_util alibabacloud_darabonba_signature_util alibabacloud_gateway_spi alibabacloud_tea_util alibabacloud_openapi_util alibabacloud_endpoint_util alibabacloud_darabonba_string alibabacloud_darabonba_map alibabacloud_darabonba_array alibabacloud_tea_xml coverage pytest alibabacloud-credentials && python setup.py install
     - name: Test with unittest
       run: |
-        coverage run --source="./alibabacloud_tea_util" -m pytest tests/test_*
+        coverage run -m unittest discover
     - name: CodeCov
       run: bash <(curl -s https://codecov.io/bash) -cF python
